--- a/index.html
+++ b/index.html
@@ -30,51 +30,49 @@
                                 Природных заповедников 105<br>
                                 Аэропортов 241</p>
         </section>
-        <section>
-          <div class="photo-grid">
+        <section class="photo-grid">
             <div>
-            <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда">
+            <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
           </div>
           <div class="photo-grid">
-            <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси">
+            <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман">
+            <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи">
+            <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса">
+            <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал">
+            <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус">
+            <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев">
+            <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1">
+            <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2">
+            <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2">
+            <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
           </div>
           <div>
-            <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки">
-          </div>
+            <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
           </div>
         </section>
         <section class="places">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <h4 class="place__website place__website_url-heading">URL</h4>
-              <a class="place__website place__website_link">park-kosa.ru</a>
+              <a class="place__website place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
             <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="place__image">
               <div class="place__paragraph">
@@ -84,7 +82,7 @@
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <h4 class="place__website_url-heading">URL</h4>
-              <a class="place__website_link">National Geographic</a>
+              <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
             <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="place__image">
               <div class="place__paragraph">
@@ -94,7 +92,7 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <h4 class="place__website_url-heading">URL</h4>
-              <a class="place__website_link">Facebook</a>
+              <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
             <img src="./images/places/place-altai.jpg" alt="Алтай" class="place__image">
               <div class="place__paragraph">
@@ -104,7 +102,7 @@
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <h4 class="place__website_url-heading">URL</h4>
-              <a class="place__website_link">https://vk.com/baikalmile</a>
+              <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
               <div class="place__paragraph">
@@ -114,7 +112,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <h4 class="place__website_url-heading">URL</h4>
-              <a class="place__website_link">https://vk.com/baikalmile</a>
+              <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
             </div>
             <img src="./images/places/place-karelia.jpg" alt="Карелия" class="place__image">
               <div class="place__paragraph">
@@ -124,18 +122,18 @@
         </section>
         <section class="cover">
           <div class="cover__overlay">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" ><h2 class="cover__title">До Байкала «на собаках»</h2></a>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </div>
         </section>
       </main>
       <footer class="footer">
         <ul class="footer__menu-link">
-          <li><a href="#" class="footer__link">Карты</a></li>
-          <li><a href="#" class="footer__link">Погода</a></li>
-          <li><a href="#" class="footer__link">Расписание</a></li>
-          <li><a href="#" class="footer__link">Календарь</a></li>
-          <li><a href="#" class="footer__link">Путешествие</a></li>
+          <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+          <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+          <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+          <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+          <li><a href="https://travel.yandex.ru" class="footer__link">Путешествие</a></li>
         </ul>
         <p class="footer__copyright">&copy;2022 Мильват Кирилл</p>
       </footer>
