--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section class="places">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-              <h4 class="place__website place__website_url-heading">URL</h4>
+              <p class="place__website place__website_url-heading">url</p>
               <a class="place__website place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
             <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="place__image">
@@ -81,7 +81,7 @@
             </div>
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-              <h4 class="place__website_url-heading">URL</h4>
+              <p class="place__website_url-heading">url</p>
               <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
             <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="place__image">
@@ -91,7 +91,7 @@
             </div>
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-              <h4 class="place__website_url-heading">URL</h4>
+              <p class="place__website_url-heading">url</p>
               <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
             <img src="./images/places/place-altai.jpg" alt="Алтай" class="place__image">
@@ -101,7 +101,7 @@
             </div>
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-              <h4 class="place__website_url-heading">URL</h4>
+              <p class="place__website_url-heading">url</p>
               <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
@@ -111,7 +111,7 @@
             </div>
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-              <h4 class="place__website_url-heading">URL</h4>
+              <p class="place__website_url-heading">url</p>
               <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
             </div>
             <img src="./images/places/place-karelia.jpg" alt="Карелия" class="place__image">
