--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-          <img src="./images/lead/lead-polka.jpg" alt=:"Полка" class="lead__image">
+          <img src="./images/lead/lead-polka.jpg" alt="Полка" class="lead__image">
           <h4 class="lead__caption">ваша полка — верхняя</h4>
         </section>
         <section class="intro">
@@ -30,42 +30,44 @@
                                 Природных заповедников 105<br>
                                 Аэропортов 241</p>
         </section>
-        <section class="photo-grid">
-            <div>
-            <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
-          </div>
+        <section>
           <div class="photo-grid">
-            <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
-          </div>
-          <div>
-            <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
+            <div>
+              <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
+            </div>
+            <div class="photo-grid">
+              <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
+            </div>
+            <div>
+              <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
+            </div>
           </div>
         </section>
         <section class="places">
