--- a/index.html
+++ b/index.html
@@ -24,53 +24,30 @@
         <section class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <blockquote class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</blockquote>
-          <p class="intro__list">Часовых поясов 11<br>
-                                Объектов природного наследия ЮНЕСКО 12<br>
-                                Объектов культурного наследия ЮНЕСКО 16<br>
-                                Природных заповедников 105<br>
-                                Аэропортов 241</p>
+          <p class="intro__list">Часовых поясов 11</p>
+                                <p class="intro__list">Объектов природного наследия ЮНЕСКО 12</p>
+                                <p class="intro__list">Объектов культурного наследия ЮНЕСКО 16</p>
+                                <p class="intro__list">Природных заповедников 105</p>
+                                <p class="intro__list">Аэропортов 241</p>
         </section>
-        <section>
-          <div class="photo-grid">
-            <div>
-              <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
-            </div>
-            <div class="photo-grid">
+        <section class="photo-grid">
+          <div class="photo-grid__item">
+            <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
               <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
-            </div>
-            <div>
               <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
-            </div>
           </div>
         </section>
-        <section class="places">
+        <section >
+          <article class="places place__item">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <p class="place__website place__website_url-heading">url</p>
@@ -81,6 +58,8 @@
               <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава. </p>
               <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря. </p>
             </div>
+          </article>
+          <article class="places">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <p class="place__website_url-heading">url</p>
@@ -91,6 +70,8 @@
               <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава. </p>
               <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря. </p>
             </div>
+          </article>
+          <article class="places">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <p class="place__website_url-heading">url</p>
@@ -101,6 +82,8 @@
               <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава. </p>
               <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря. </p>
             </div>
+          </article>
+          <article class="places">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
               <p class="place__website_url-heading">url</p>
@@ -111,6 +94,8 @@
               <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава. </p>
               <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря. </p>
             </div>
+          </article>
+          <article class="places">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <p class="place__website_url-heading">url</p>
@@ -121,12 +106,13 @@
               <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава. </p>
               <p>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря. </p>
             </div>
+          </article>
         </section>
         <section class="cover">
-          <div class="cover__overlay">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title">До Байкала «на собаках»</h2></a>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-          </div>
+            <div class="cover__overlay">
+              <a href="https://stampsy.com/na-elektrichkakh-do-baikala"><h2 class="cover__title">До Байкала «на собаках»</h2></a>
+              <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            </div>
         </section>
       </main>
       <footer class="footer">
