--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="#" class="header__lang-link header__lang-link_EN">EN</a>
         </div>
       </header>
-
+        <main>
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -30,23 +30,25 @@
                                 <p class="intro__list">Природных заповедников 105</p>
                                 <p class="intro__list">Аэропортов 241</p>
         </section>
-        <section class="photo-grid">
-          <div class="photo-grid__item">
-            <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
-            <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
+        <section>
+          <div class="photo-grid">
+            <div class="photo-grid__item">
+              <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
+            </div>
           </div>
         </section>
-        <section >
+        <section>
           <article class="places">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
