--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
         <section>
           <div class="photo-grid">
             <div class="photo-grid__item">
-              <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo__image">
-              <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo__image">
+              <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__image">
+              <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__image">
             </div>
           </div>
         </section>
