--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <article class="places">
             <h2 class="places__title">Куршская коса</h2>
             <div class="places__website">
-              <p class="places__website places__website_url-heading">url</p>
-              <a class="places__website places__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+              <p class="places__website places__website places__website_url-heading">url</p>
+              <a class="places__website places__website places__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
             </div>
             <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="places__image">
               <div class="places__paragraph">
@@ -64,8 +64,8 @@
           <article class="places">
             <h2 class="places__title">Кольский</h2>
             <div class="places__website">
-              <p class="places__website_url-heading">url</p>
-              <a class="places__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+              <p class="places__website places__website_url-heading">url</p>
+              <a class="places__website places__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
             </div>
             <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="places__image">
               <div class="places__paragraph">
@@ -77,8 +77,8 @@
           <article class="places">
             <h2 class="places__title">Алтай</h2>
             <div class="places__website">
-              <p class="places__website_url-heading">url</p>
-              <a class="places__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+              <p class="places__website places__website_url-heading">url</p>
+              <a class="places__website places__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
             </div>
             <img src="./images/places/place-altai.jpg" alt="Алтай" class="places__image">
               <div class="places__paragraph">
@@ -90,8 +90,8 @@
           <article class="places">
             <h2 class="places__title">Зимний Байкал</h2>
             <div class="places__website">
-              <p class="places__website_url-heading">url</p>
-              <a class="places__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+              <p class="places__website places__website_url-heading">url</p>
+              <a class="places__website places__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="places__image">
               <div class="places__paragraph">
@@ -104,8 +104,8 @@
           <article class="places">
             <h2 class="places__title">Карелия</h2>
             <div class="places__website">
-              <p class="places__website_url-heading">url</p>
               <a class="places__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+              <p class="places__website places__website places__website_url-heading">url</p>
             </div>
             <img src="./images/places/place-karelia.jpg" alt="Карелия" class="places__image">
               <div class="places__paragraph">
