--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <article class="places">
             <h2 class="places__title">Карелия</h2>
             <div class="places__website">
-              <a class="places__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+              <a class="places__website places__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
               <p class="places__website places__website places__website_url-heading">url</p>
             </div>
             <img src="./images/places/place-karelia.jpg" alt="Карелия" class="places__image">
