--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +21,7 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="./images/lead/lead-polka.jpg" alt="Полка" class="lead__image">
-      <h4 class="lead__caption">ваша полка — верхняя</h4>
+      <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -128,8 +129,8 @@
       <article class="places">
         <h2 class="places__title">Карелия</h2>
         <div class="places__website">
-          <a class="places__website places__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           <p class="places__website places__website places__website_url-heading">url</p>
+          <a class="places__website places__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places/place-karelia.jpg" alt="Карелия" class="places__image">
         <div class="places__paragraph">
@@ -143,22 +144,25 @@
       </article>
     </section>
     <section class="cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
-        </a>
+      </a>
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__menu-link">
-      <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-      <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-      <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-      <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-      <li><a href="https://travel.yandex.ru" class="footer__link">Путешествие</a></li>
-    </ul>
+    <nav>
+      <ul class="footer__menu-link">
+        <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link">Путешествие</a></li>
+      </ul>
+    </nav>
     <p class="footer__copyright">&copy;2022 Мильват Кирилл</p>
   </footer>
 </body>
+
 </html>
