--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</blockquote>
       <p class="intro__list">Часовых поясов 11</p>
-      <p class="intro__list">Объектов природного наследия ЮНЕСКО 12</p>
-      <p class="intro__list">Объектов культурного наследия ЮНЕСКО 16</p>
+      <p class="intro__list">Объектов природного наследия <span class="intro__list_up-case">ЮНЕСКО</span> 12</p>
+      <p class="intro__list">Объектов культурного наследия <span class="intro__list_up-case">ЮНЕСКО</span> 16</p>
       <p class="intro__list">Природных заповедников 105</p>
       <p class="intro__list">Аэропортов 241</p>
     </section>
