--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2 class="places__title">Куршская коса</h2>
         <div class="places__website">
           <p class="places__website places__website places__website_url-heading">url</p>
-          <a class="places__website places__website places__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+          <a class="places__website places__website places__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
         <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="places__image">
         <div class="places__paragraph">
@@ -78,7 +78,7 @@
         <div class="places__website">
           <p class="places__website places__website_url-heading">url</p>
           <a class="places__website places__website_link"
-            href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
         </div>
         <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="places__image">
         <div class="places__paragraph">
@@ -96,7 +96,7 @@
         <div class="places__website">
           <p class="places__website places__website_url-heading">url</p>
           <a class="places__website places__website_link"
-            href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
         </div>
         <img src="./images/places/place-altai.jpg" alt="Алтай" class="places__image">
         <div class="places__paragraph">
@@ -113,7 +113,7 @@
         <h2 class="places__title">Зимний Байкал</h2>
         <div class="places__website">
           <p class="places__website places__website_url-heading">url</p>
-          <a class="places__website places__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          <a class="places__website places__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="places__image">
         <div class="places__paragraph">
@@ -130,7 +130,7 @@
         <h2 class="places__title">Карелия</h2>
         <div class="places__website">
           <p class="places__website places__website places__website_url-heading">url</p>
-          <a class="places__website places__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+          <a class="places__website places__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places/place-karelia.jpg" alt="Карелия" class="places__image">
         <div class="places__paragraph">
@@ -144,7 +144,7 @@
       </article>
     </section>
     <section class="cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
@@ -154,11 +154,11 @@
   <footer class="footer">
     <nav>
       <ul class="footer__menu-link">
-        <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-        <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-        <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-        <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-        <li><a href="https://travel.yandex.ru" class="footer__link">Путешествие</a></li>
+        <li><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествие</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">&copy;2022 Мильват Кирилл</p>
