--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
   </main>
   <footer class="footer">
     <nav>
-      <ul class="footer__menu ">
-        <li class="footer__menu_item"><a href="https://yandex.ru/maps" class="footer__link " target="_blank">Карты</a></li>
-        <li class="footer__menu_item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
-        <li class="footer__menu_item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
-        <li class="footer__menu_item"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
-        <li class="footer__menu_item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествие</a></li>
+      <ul class="footer__menu">
+        <li class="footer__menu footer__menu_item"><a href="https://yandex.ru/maps" class="footer__link " target="_blank">Карты</a></li>
+        <li class="footer__menu footer__menu_item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+        <li class="footer__menu footer__menu_item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
+        <li class="footer__menu footer__menu_item"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
+        <li class="footer__menu footer__menu_item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествие</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">&copy;2022 Мильват Кирилл</p>
