--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header">
     <img src="./images/header/header-logo.svg" alt="Лого" class="header__logo">
     <div class="header__lang-link">
-      <a href="#" class="header__lang-link header__lang-link_active header__lang-link_selected">Ru</a>
-      <a href="#" class="header__lang-link header__lang-link_active">En</a>
+      <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
   <main>
@@ -119,8 +119,7 @@
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
           <p class="place__url">url</p>
-          <a class="place__link" href="https://vk.com/baikalmile"
-            target="_blank">https://vk.com/baikalmile</a>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
         <div>
@@ -163,12 +162,10 @@
   <footer class="footer">
     <nav>
       <ul class="footer__menu">
-        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link "
-            target="_blank">Карты</a></li>
-        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link"
-            target="_blank">Погода</a></li>
-        <li class=" footer__item"><a href="https://rasp.yandex.ru" class="footer__link"
-            target="_blank">Расписание</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link " target="_blank">Карты</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+        <li class=" footer__item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+        </li>
         <li class=" footer__item"><a href="https://calendar.yandex.ru" class="footer__link"
             target="_blank">Календарь</a></li>
         <li class=" footer__item"><a href="https://travel.yandex.ru" class="footer__link"
