--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p class="intro__list">Объектов природного наследия <span
           class="intro__list intro__list_up-case">ЮНЕСКО</span><span class="intro__span-accent"> 12</span>
       </p>
-      <p class="intro__list">Объектов культурного наследия <span class="intro__list_up-case">ЮНЕСКО</span>
+      <p class="intro__list">Объектов культурного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span>
         <span class=" intro__span-accent">16</span>
       </p>
       <p class="intro__list">Природных заповедников <span class="intro__span-accent">105</span></p>
